--- a/Identity/src/Identity/Properties/launchSettings.json
+++ b/Identity/src/Identity/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IdentityModule": {
+    "Identity": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
