--- a/BasicMvc/src/BasicMvc/appsettings.json
+++ b/BasicMvc/src/BasicMvc/appsettings.json
@@ -6,5 +6,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Modules": {
+    "Module1": {
+      "PathBase": "/Module1"
+    }
   }
 }
