--- a/BasicMvc/src/BasicMvc/project.json
+++ b/BasicMvc/src/BasicMvc/project.json
@@ -1,34 +1,34 @@
 ﻿{
   "dependencies": {
-    "Microsoft.AspNetCore.Diagnostics": "1.1.0-preview1-final",
-    "Microsoft.AspNetCore.Modules": "1.0.0-preview1-2",
-    "Microsoft.AspNetCore.Mvc": "1.1.0-preview1-final",
+    "Microsoft.AspNetCore.Diagnostics": "1.1.0",
+    "Microsoft.AspNetCore.Modules": "1.0.0-preview1-3",
+    "Microsoft.AspNetCore.Mvc": "1.1.0",
     "Microsoft.AspNetCore.Razor.Tools": {
-      "version": "1.0.0-preview3-final",
+      "version": "1.1.0-preview4-final",
       "type": "build"
     },
-    "Microsoft.AspNetCore.Routing": "1.1.0-preview1-final",
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0-preview1-final",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.1.0-preview1-final",
-    "Microsoft.AspNetCore.StaticFiles": "1.1.0-preview1-final",
-    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0-preview1-final",
-    "Microsoft.Extensions.Configuration.Json": "1.1.0-preview1-final",
-    "Microsoft.Extensions.Logging": "1.1.0-preview1-final",
-    "Microsoft.Extensions.Logging.Console": "1.1.0-preview1-final",
-    "Microsoft.Extensions.Logging.Debug": "1.1.0-preview1-final",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0-preview1-final",
+    "Microsoft.AspNetCore.Routing": "1.1.0",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
+    "Microsoft.AspNetCore.StaticFiles": "1.1.0",
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
+    "Microsoft.Extensions.Configuration.Json": "1.1.0",
+    "Microsoft.Extensions.Logging": "1.1.0",
+    "Microsoft.Extensions.Logging.Console": "1.1.0",
+    "Microsoft.Extensions.Logging.Debug": "1.1.0",
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
     "Microsoft.NETCore.App": {
-      "version": "1.1.0-preview1-001100-00",
+      "version": "1.1.0",
       "type": "platform"
     },
-    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0-preview1-final",
-    "Module1": "1.0.0-preview1-2"
+    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0",
+    "Module1": "1.0.0-preview1-3"
   },
 
   "tools": {
     "BundlerMinifier.Core": "2.2.301",
-    "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview3-final",
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview3-final"
+    "Microsoft.AspNetCore.Razor.Tools": "1.1.0-preview4-final",
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.1.0-preview4-final"
   },
 
   "frameworks": {
